# turboquant-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
bench/: BASELINES.md  CMakeLists.txt  bench_dequantize.cpp  bench_kv_cycle.cpp  bench_prod_score.cpp  bench_quantize.cpp  bench_rotation.cpp  bench_util.hpp
cmake/: FetchBenchmark.cmake  FetchCatch2.cmake  FetchJson.cmake  FetchOnnxRuntime.cmake
include/turboquant/: aligned_buffer.hpp  arch.hpp  codebook.hpp  compressed_kv_store.hpp  config.hpp  error.hpp  kv_capture.hpp  pack_policy.hpp  qjl_signs.hpp  quantizer_mse.hpp  quantizer_prod.hpp  ring_buffer.hpp  rotation.hpp  score.hpp  types.hpp  value_quant.hpp
include/turboquant/neon/: kernels.hpp  scalar_fallback.hpp
include/turboquant/onnx/: custom_ops.hpp
onnx/: CMakeLists.txt  exported_symbols.txt
onnx/src/: op_mse_dequantize.cpp  op_mse_quantize.cpp  op_prod_attention_score.cpp  op_prod_dequantize.cpp  op_prod_quantize.cpp  op_registry.cpp  op_util.hpp  op_value_dequantize.cpp  op_value_quantize.cpp  shared_kernel_state.cpp  shared_kernel_state.hpp
onnx/tests/: smoke.cpp
src/: codebook_lloyd_max.cpp  codebook_loader.cpp  compressed_kv_store.cpp  kv_capture.cpp  quantizer_mse.cpp  quantizer_prod.cpp  ring_buffer.cpp  rotation_accelerate.cpp  rotation_scalar.cpp  score.cpp  value_quant.cpp
src/internal/: gaussian_rng.hpp
tests/: CMakeLists.txt
tests/unit/: test_codebook.cpp  test_kv_cache.cpp  test_lloyd_max.cpp  test_neon_kernels.cpp  test_pack_policy.cpp  test_qjl_signs.cpp  test_quantizer_mse.cpp  test_quantizer_prod.cpp  test_rotation.cpp  test_score.cpp  test_value_quant.cpp
tools/: codebooks_to_cpp.py
